[package]
name = "rodal"
version = "0.0.1"
authors = [ "Your name <you@example.com>" ]
include = ["Cargo.toml", "src/**/*.rs"]
build = "build.rs"

[build-dependencies]
rustc_version = "*"

[dependencies]
libc = "0.2.24"
num = "*"
log = "*"
field-offset = "*"

[lib]
crate-type = ["staticlib", "rlib", "dylib"]
