# Copyright 2017 The Australian National University
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "rodal"
version = "0.1.16"
authors = [ "Your name <you@example.com>" ]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
libc = "^0.2"
num = "^0.1"
log = "^0.4"
field-offset = "^0.1"

[lib]
crate-type = ["staticlib", "rlib", "dylib"]
